<?xml version="1.0"?>
<package>
  <name>pr2_battery_alert</name>

  <version>0.0.1</version>

  <description>The pr2_battery_alert package</description>

  <maintainer email="harmish@laas.fr">harmish khambhaita</maintainer>

  <!--  <author email="author_email">author_name</author>  -->

  <license>BSD</license>

  <!--  <url website >http://wiki.ors.org/pr2_battery_alert</url>  -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pr2_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sound_play</build_depend>

  <run_depend>pr2_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sound_play</run_depend>
</package>
